footer fixes, vertical align content

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,13 +1,16 @@
 .footer {
     min-height: 80px;
     background-color: var(--color-footer);
+    & .container {
+        min-height: 80px;
+    }
 }
 
 .footer__content-wrapper {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 80px;
     padding: 10px 0;
     font-weight: 400;
     font-size: 13px;
